--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Literature -- Collections'
 - !lcsh 'Children''s literature'
+- GITenberg
 title: Journeys Through Bookland, Vol. 7
 url: http://www.gutenberg.org/ebooks/23405
